# malco

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  test.txt  tox.ini
caches/: cache_log.txt
dev/: ontoGPT_malco_postporocess.ipynb
notebooks/: .gitignore  count_hpo_terms.ipynb  count_hpo_terms_genes_pubs.ipynb  examine_diseases_diagnosed_missed_mcnemars.ipynb  make_fig_2.ipynb  make_fig_2_and_summary_statistics.ipynb  ontogpt_and_curategpt_for_grounding_test.ipynb  plot_exomiser_o1MINI_4o.ipynb  plot_exomiser_o1MINI_o1PREVIEW_4o.ipynb  plot_exomiser_o1_4turbo.ipynb  process_exomiser_json_data_to_tsvs.ipynb  process_gpt_4o_and_plot.ipynb  process_gpt_o1_MINI_and_plot.ipynb  process_gpt_o1_PREVIEW_and_plot.ipynb  process_gpt_o1_and_plot.ipynb
outputdir_all_2024_07_02/: cache_log.txt  results.yml
outputdir_all_2024_07_04/: cache_log.txt  results.yml
outputdir_text_mined_2024_07_02/: cache_log.txt  results.yml
phenopacket-store-release/: all_phenopackets.tsv
prompts5213ppkts_2oct/: correct_results.tsv
prompts_for_ungrounded/: PMID_10580070_D_II_4_it-prompt.txt  PMID_10805329_10805329_P2_it-prompt.txt  PMID_10939567_Spo89_it-prompt.txt  PMID_11118249_PATIENT_III_2_it-prompt.txt  PMID_11175294_D13_it-prompt.txt  PMID_14585638_F3_3_it-prompt.txt  PMID_15266616_35_it-prompt.txt  PMID_15499950_15499950_P1_it-prompt.txt  PMID_15499950_15499950_P4_it-prompt.txt  PMID_15731757_Family_3_II_1_it-prompt.txt  PMID_15781812_individual_174_it-prompt.txt  PMID_16429406_first_patient_it-prompt.txt  PMID_16596670_Patient_4_it-prompt.txt  PMID_17661820_4_it-prompt.txt  PMID_18256394_1_it-prompt.txt  PMID_18551513_14_it-prompt.txt  PMID_19541485_patient_it-prompt.txt  PMID_20310007_40_year_old_man_it-prompt.txt  PMID_20375004_3_II_2_it-prompt.txt  PMID_20493457_Subject_3_it-prompt.txt  PMID_20683840_II_15_it-prompt.txt  PMID_21217753_Fam_1_IV_17_it-prompt.txt  PMID_21358634_Family_16_it-prompt.txt  PMID_21683322_14_it-prompt.txt  PMID_21683322_18_it-prompt.txt  PMID_21683322_26_it-prompt.txt  PMID_22034507_AIII_4_it-prompt.txt  PMID_22034507_BII_6_it-prompt.txt  PMID_22428873_P2_it-prompt.txt  PMID_22539873_II_1_it-prompt.txt  (+161 more)
(+11774 files in other folders)
